@@ -402,6 +402,24 @@ def test_export_no_overwrite(bibs, mock_init):
            in os.listdir(u.HOME)
 
 
+def test_export_meta(bibs, mock_init_sample):
+    bibs = bm.load()
+    bm_export = u.HOME+'tmp_bm.bib'
+    bm.export(bibs, bm_export, meta=True)
+    with open(bm_export, "r") as f:
+        lines = f.readlines()
+    assert "pdf: Slipher1913.pdf\n" in lines
+
+
+def test_export_no_meta(bibs, mock_init_sample):
+    bibs = bm.load()
+    bm_export = u.HOME+'tmp_bm.bib'
+    bm.export(bibs, bm_export, meta=False)
+    with open(bm_export, "r") as f:
+        lines = f.readlines()
+    assert "pdf: Slipher1913.pdf\n" not in lines
+
+
 def test_merge_bibfile(capfd, mock_init):
     bm.merge(u.HOME + "examples/sample.bib")
     captured = capfd.readouterr()
